src/index.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;


/* BASE */

* {
    font-family: "Poppins", sans-serif;
}

html {
    scroll-behavior: smooth;
}

body {
    @apply bg-zinc-900 text-zinc-50
}

.container {
    @apply px-4 mx-auto lg:px-8 xl:max-w-6xl
}

.img-box {
    @apply bg-zinc-700 overflow-hidden
}

.img-cover {
    @apply w-full h-full object-cover
}

/* TYPOGRAPHY */
.headLine-1,
.headLine-2 {
    @apply max-w-max;
    background: -webkit-linear-gradient(0deg, #fafafa, #a1a1a1);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

.headLine-1 {
    @apply text-5xl leading-tight font-semibold lg:text-[55px] lg:leading-[1.15]
}

.headLine-2 {
    @apply text-3xl lg:text-4xl lg:leading-tight font-semibold
}

.title-1 {
    @apply text-[22px] font-normal
}

.section {
    @apply pt-20 lg:pt-32
}

.reveal-up {
    @apply translate-y-20 opacity-0
}


/* COMPONENTS */

/* Menu btn */

.menu-btn {
    @apply w-10 h-10 grid place-items-center bg-zinc-50/10 rounded-xl ring-inset ring-1 ring-zinc-50/[0.02] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,background-color] active:scale-95
}

/* Navbar */

.navbar {
    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-50/10 rounded-2xl ring-inset ring-1 ring-zinc-50/5 scale-90 isolate blur-sm opacity-0 invisible transition-[opacity,transform,filter] md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-0 md:visible md:scale-100 backdrop-blur-2xl
}

.navbar.active {
    @apply opacity-100 scale-100 blur-0 visible
}

.nav-link {
    @apply grid items-center h-9 px-4 text-sm font-medium tracking-wide text-zinc-50/50 hover:text-zinc-50 transition-colors
}

.nav-link.active {
    @apply text-zinc-900 duration-500
}

.navbar .active-box {
    @apply absolute bg-zinc-50 rounded-lg -z-10 transition-[top,left] duration-500
}

/* Button */

.btn {
    @apply max-w-max h-9 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-50/5 ring-inset transition-[background-color]
}

.btn-secondary {
    @apply bg-zinc-50 text-zinc-900 active:bg-zinc-50/80
}

.btn .material-symbols-rounded {
    @apply text-[18px]
}

.btn:has(.material-symbols-rounded) {
    @apply pr-3
}

.btn-primary {
    @apply bg-sky-400 text-zinc-950 hover:bg-sky-300 active:bg-sky-400
}

.btn-outline {
    @apply h-11 bg-zinc-800 hover:bg-zinc-700 active:bg-zinc-800
}


/* Text Field */
.label {
    @apply block text-zinc-200 text-sm font-medium mb-2
}

.text-field {
    @apply block outline-none w-full px-3 py-3 text-sm bg-zinc-800 rounded-xl ring-1 ring-inset ring-transparent transition-shadow hover:ring-zinc-50/50 focus:ring-sky-400 focus:ring-2
}

.text-field::placeholder {
    @apply text-zinc-400
}

